--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,18 @@
 <div class="everything-cover">
+  <div>
+    <nav class="top-navigation">
+      <div class="row">
+        <%= link_to "Link", "", class: "col l4 top-nav link" %>
+        <%= link_to "Link", "", class: "col l2 top-nav link" %>
+        <%= link_to "Link", "", class: "col l2 top-nav link" %>
+        <%= link_to "Link", "", class: "col l2 top-nav link" %>
+        <%= link_to "Link", "", class: "col l2 top-nav link" %>
+      </div>
+    </nav>
+  </div>
+</div>
+<div>
+  <footer class="bottom-footer">
+    <div>Just a message</div>
+  </footer>
 </div>
