--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,3 +2,21 @@
   min-height: 50em;
   background: url('http://i.huffpost.com/gen/2578874/images/o-SAD-WOMAN-REAR-VIEW-facebook.jpg') center / cover;
 }
+
+.top-navigation {
+  // background: #B09D84;
+  // background: #286162;
+  // background: #FFD1BF;
+  background: #5A0031;
+  position: fixed;
+
+  a {
+    color: #fff;
+  }
+}
+
+.bottom-footer {
+  min-height: 20em;
+  background: black;
+  color: white;
+}
