--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
-@import "materialize";
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "font-awesome";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "homes";
