--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import "animate";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "homes";
