--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -349,6 +349,7 @@ header .header-content .header-content-inner p {
     border-color: #ededed;
     color: #222;
     background-color: #f2f2f2;
+    box-shadow: 2px 2px 5px #888888;
 }
 
 .btn-default:active,
@@ -439,7 +440,7 @@ fieldset[disabled] .btn-primary.active {
 
 .btn {
     border: 0;
-    border-radius: 300px;
+    // border-radius: 300px;
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
