finish form for moderator

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,6 @@
 @import "animate";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "homes";
+@import "moderators";
+
 
