--- a/app/assets/stylesheets/moderators.scss
+++ b/app/assets/stylesheets/moderators.scss
@@ -132,3 +132,40 @@ body {
   color: #333333;
   text-decoration: none;
 }
+
+.navbar-static-top.dashboard {
+  margin-bottom:20px;
+}
+
+i {
+  font-size:16px;
+}
+
+.nav.dashboard > li > a {
+  color:#787878;
+}
+  
+footer.dashboard {
+  margin-top:20px;
+  padding-top:20px;
+  padding-bottom:20px;
+  background-color:#efefef;
+}
+
+/* count indicator near icons */
+.nav.dashboard>li .count {
+  position: absolute;
+  bottom: 12px;
+  right: 6px;
+  font-size: 9px;
+  background: rgba(51,200,51,0.55);
+  color: rgba(255,255,255,0.9);
+  line-height: 1em;
+  padding: 2px 4px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+}
+
