add factory girls and coveralls

--- a/app/views/moderators/show.html.erb
+++ b/app/views/moderators/show.html.erb
@@ -23,7 +23,7 @@
     <!-- /container -->
 </div>
 <!-- /Header -->
-
+<%= flash[:message] %>
 <!-- Main -->
 <div class="container-fluid">
     <div class="row">
