--- a/app/views/moderators/show.html.erb
+++ b/app/views/moderators/show.html.erb
@@ -11,12 +11,12 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right dashboard">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i> Admin <span class="caret"></span></a>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i> <%= current_moderator.firstname %> <span class="caret"></span></a>
                     <ul id="g-account-menu" class="dropdown-menu" role="menu">
                         <li><a href="#">My Profile</a></li>
                     </ul>
                 </li>
-                <li><a href="#"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
+                <li><i class="glyphicon glyphicon-lock"></i><%= link_to "Log out", session_path, method: :delete%></li>
             </ul>
         </div>
     </div>
