tests for create action in session controller

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -178,7 +178,8 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: image-url("header.jpg");
+    background-color: rgba(0,0,0, 0.8);
+    // background-image: image-url("feminity.jpg");
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
