--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -472,3 +472,21 @@ img::-moz-selection {
     color: #fff;
     background: 0 0;
 }
+
+.navbar {
+    background-color: #2E2E2E;
+}
+
+.remaining {
+    background-color: white;
+    min-height: 70em;
+    width: 80%;
+    margin: 7em auto 3.5em;
+    border-radius: 1em;
+    border: 1px solid #e1e1e1;
+}
+
+.general-footer {
+    background-color: #2E2E2E;
+}
+
