--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "font-awesome";
 @import "animate";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import "variables";
 @import "homes";
 @import "moderators";
 
