--- a/app/assets/stylesheets/moderators.scss
+++ b/app/assets/stylesheets/moderators.scss
@@ -33,7 +33,7 @@ body {
 /* Form Module */
 .form-module {
   position: relative;
-  background: #ffffff;
+  background: $pure-white;
   max-width: 320px;
   width: 100%;
   border-top: 5px solid #33b5e5;
@@ -49,7 +49,7 @@ body {
   width: 30px;
   height: 30px;
   margin: -5px 0 0;
-  color: #ffffff;
+  color: $pure-white;
   font-size: 12px;
   line-height: 30px;
   text-align: center;
@@ -112,7 +112,7 @@ body {
   width: 100%;
   border: 0;
   padding: 10px 15px;
-  color: #ffffff;
+  color: $pure-white;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
 }
@@ -158,8 +158,8 @@ footer.dashboard {
   bottom: 12px;
   right: 6px;
   font-size: 9px;
-  background: rgba(51,200,51,0.55);
-  color: rgba(255,255,255,0.9);
+  background: rgba(51, 200, 51, 0.55);
+  color: rgba(255, 255, 255, 0.9);
   line-height: 1em;
   padding: 2px 4px;
   -webkit-border-radius: 10px;
