add special front pics

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -175,9 +175,9 @@ header {
   min-height: auto;
   text-align: center;
   color: $pure-white;
-  background-color: rgba(0,0,0, 0.8);
-  // background-image: image-url("feminity.jpg");
-  background-position: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: image-url("black_beauty.jpg");
+  background-position: 5 0;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
