--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -8,29 +8,29 @@ body {
 }
 
 body {
-  font-family: Merriweather, 'Helvetica Neue', Arial, sans-serif;
+  font: $merry, $helv, $aria, $sans;
 }
 
 hr {
-  border-color: #F4BBFF;
+  border-color: $pale-magenta;
   border-width: 3px;
   max-width: 50px;
-}
 
-hr.light {
+  .light {
     border-color: $pure-white;
+  }
 }
 
 a {
-  color: #F4BBFF;
-  -webkit-transition: all .35s;
-  -moz-transition: all .35s;
-  transition: all .35s;
+  color: $pale-magenta;
+  -moz-transition: all 0.35s;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 a:hover,
 a:focus {
-    color: #eb3812;
+  color: $vivid-red;
 }
 
 h1,
@@ -39,7 +39,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font: $open-sans, $helv, $aria, $sans;
 }
 
 p {
@@ -49,7 +49,7 @@ p {
 }
 
 .bg-primary {
-  background-color: #f05f40;
+  background-color: $bright-red;
 }
 
 .bg-dark {
@@ -58,7 +58,7 @@ p {
 }
 
 .text-faded {
-  color: rgba(255,255,255,.7);
+  color: rgba($pure-white, 0.7);
 }
 
 section {
@@ -75,42 +75,42 @@ aside {
 
 .navbar-default {
   background-color: $pure-white;
-  border-color: rgba(34,34,34,.05);
-  font-family: 'Open Sans', 'Helvetica Neue', Arial,sans-serif;
-  -webkit-transition: all .35s;
-  -moz-transition: all .35s;
-  transition: all .35s;
+  border-color: rgba(34, 34, 34, 0.05);
+  font: $open-sans, $helv, $aria, $sans;
+  -moz-transition: all 0.35s;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
 }
 
 .navbar-default .navbar-header .navbar-brand {
-    text-transform: uppercase;
-    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
-    font-weight: 700;
-    color: #f05f40;
+  color: $bright-red;
+  font: $open-sans, $helv, $aria, $sans;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-  color: #eb3812;
+  color: $vivid-red;
 }
 
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
-  text-transform: uppercase;
+  color: $near-black;
   font-size: 13px;
   font-weight: 700;
-  color: $near-black;
+  text-transform: uppercase;
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-  color: #f05f40;
+  color: $bright-red;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-  color: #f05f40!important;
   background-color: transparent;
+  color: $bright-red !important;
 }
 
 .navbar-default .nav > li.active>a:hover,
@@ -120,12 +120,12 @@ aside {
 
 @media(min-width:768px) {
   .navbar-default {
-    border-color: rgba(255,255,255,.3);
+    border-color: rgba(255, 255, 255, 0.3);
     background-color: transparent;
   }
 
   .navbar-default .navbar-header .navbar-brand {
-    color: rgba(255,255,255,.7);
+    color: rgba(255, 255, 255, 0.7);
   }
 
   .navbar-default .navbar-header .navbar-brand:hover,
@@ -135,7 +135,7 @@ aside {
 
   .navbar-default .nav > li>a,
   .navbar-default .nav>li>a:focus {
-    color: rgba(255,255,255,.7);
+    color: rgba(255, 255, 255, 0.7);
   }
 
   .navbar-default .nav > li>a:hover,
@@ -144,18 +144,18 @@ aside {
   }
 
   .navbar-default.affix {
-    border-color: rgba(34,34,34,.05);
     background-color: $pure-white;
+    border-color: rgba(34, 34, 34, 0.05);
   }
 
   .navbar-default.affix .navbar-header .navbar-brand {
+    color: $bright-red;
     font-size: 14px;
-    color: #f05f40;
   }
 
   .navbar-default.affix .navbar-header .navbar-brand:hover,
   .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: $vivid-red;
   }
 
   .navbar-default.affix .nav > li>a,
@@ -165,7 +165,7 @@ aside {
 
   .navbar-default.affix .nav > li>a:hover,
   .navbar-default.affix .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: $bright-red;
   }
 }
 
@@ -206,7 +206,7 @@ header .header-content .header-content-inner p {
   margin-bottom: 50px;
   font-size: 16px;
   font-weight: 300;
-  color: rgba(255,255,255,.7);
+  color: rgba(255, 255, 255, 0.7);
 }
 
 @media(min-width:768px) {
@@ -272,7 +272,7 @@ header .header-content .header-content-inner p {
   text-align: center;
   color: $pure-white;
   opacity: 0;
-  background: rgba  (240,95,64,.9);
+  background: rgba  (240, 95, 64, 0.9);
   -webkit-transition: all .35s;
   -moz-transition: all .35s;
   transition: all .35s;
@@ -289,7 +289,7 @@ header .header-content .header-content-inner p {
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-  box-caption-content .project-name {
   padding: 0 15px;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: $open-sans, $helv, $aria, $sans;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
@@ -384,7 +384,7 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-  border-color: #f05f40;
+  border-color: $bright-red;
   color: $pure-white;
   background-color: #BD35A4;
   -webkit-transition: all .35s;
@@ -427,18 +427,18 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: $bright-red;
+    background-color: $bright-red;
 }
 
 .btn-primary .badge {
   background-color: $pure-white;
-  color: #f05f40;
+  color: $bright-red;
 }
 
 .btn {
   border: 0;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font: $open-sans, $helv, $aria, $sans;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -475,7 +475,7 @@ img::-moz-selection {
 
 .remaining {
   background-color: $pure-white;
-  border: 1px solid #e1e1e1;
+  border: 1px solid $light-gray;
   border-radius: 1em;
   margin: 7em auto 3.5em;
   min-height: 70em;
