add a tinge of purple

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -23,21 +23,21 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Empowering Women</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <p class="text-muted">Change the mindset of female folks setting them on the part to freedom.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <i class="fa fa-4x fa-user-times wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Tackle Sexual Violence</h3>
                     <p class="text-muted">We update dependencies to keep things fresh.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <i class="fa fa-4x fa-hand-paper-o wow bounceIn text-primary" data-wow-delay=".3s" ></i>
                     <h3>Obliterate Domestic Violence</h3>
                     <p class="text-muted">You have to make your websites with love these days!</p>
                 </div>
